link and headers added

--- a/test.html
+++ b/test.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Заголовок над нашим текстом</h1>
         <p>Текст 11111</p>
+        <a href="#header">Link Text</a>
     </body>
 </html>
